RESOLVED FIXED184113
The 'text' color keyword is not considered a system color
https://bugs.webkit.org/show_bug.cgi?id=184113
Summary The 'text' color keyword is not considered a system color
Timothy Hatcher
Reported 2018-03-28 15:12:17 PDT
RenderTheme considers CSSValueText a system color, but it never gets consulted.
Attachments
Patch (1.98 KB, patch)
2018-03-28 15:23 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2018-03-28 15:12:33 PDT
Timothy Hatcher
Comment 2 2018-03-28 15:23:14 PDT
Tim Horton
Comment 3 2018-03-28 15:25:21 PDT
Comment on attachment 336726 [details] Patch Ideally this would have a test.
WebKit Commit Bot
Comment 4 2018-03-28 15:50:50 PDT
Comment on attachment 336726 [details] Patch Clearing flags on attachment: 336726 Committed r230056: <https://trac.webkit.org/changeset/230056>
WebKit Commit Bot
Comment 5 2018-03-28 15:50:51 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 6 2018-03-28 16:09:21 PDT
Can we add a test please?
Timothy Hatcher
Comment 7 2018-03-28 16:38:57 PDT
(In reply to Simon Fraser (smfr) from comment #6) > Can we add a test please? I'll look at adding tests for another bug I have tracking this work.
Note You need to log in before you can comment on or make changes to this bug.