Include the 'text' color keyword as a system color.

https://bugs.webkit.org/show_bug.cgi?id=184113
rdar://problem/38779267

Reviewed by Tim Horton.

* css/StyleColor.cpp:
(WebCore::StyleColor::isColorKeyword): Don't check CSSValueMenu, it is a system color and is included.
(WebCore::StyleColor::isSystemColor): Include CSSValueText. Check CSSValueWebkitFocusRingColor in the range,
since it is immediately after CSSValueAppleSystemYellow.


Canonical link: https://commits.webkit.org/199687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230056 268f45cc-cd09-0410-ab3c-d52691b4dbfc